--- a/Solution1/UI/Web.config
+++ b/Solution1/UI/Web.config
@@ -6,12 +6,12 @@
   -->
 
 <configuration>
-  <connectionStrings>
-    <add name="MyConn" connectionString="Data Source=.;Initial Catalog=test;Intergrated Security=true;"/>
-  </connectionStrings>
+  
     <system.web>
       <compilation debug="true" targetFramework="4.5.2" />
       <httpRuntime targetFramework="4.5.2" />
     </system.web>
-
+<connectionStrings>
+    <add name="MyConn" connectionString="Data Source=.;Initial Catalog=test;Integrated Security=True"/>
+  </connectionStrings>
 </configuration>
