--- a/Solution1/BLL/BLL.csproj
+++ b/Solution1/BLL/BLL.csproj
@@ -40,9 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Datasplit.cs" />
     <Compile Include="isLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="wipeData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
