--- a/Solution1/BLL/BLL.csproj
+++ b/Solution1/BLL/BLL.csproj
@@ -30,8 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="dotnetCHARTING">
+      <HintPath>bin\dotnetCHARTING.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Charting.cs" />
     <Compile Include="Datasplit.cs" />
     <Compile Include="isLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
