--- a/Solution1/BLL/BLL.csproj
+++ b/Solution1/BLL/BLL.csproj
@@ -35,7 +35,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,12 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Charting.cs" />
     <Compile Include="Datasplit.cs" />
     <Compile Include="isLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="cxjs.cs" />
     <Compile Include="PWDProcess.cs" />
+    <Compile Include="wpjs.cs" />
     <Compile Include="xsqk.cs" />
   </ItemGroup>
   <ItemGroup>
