--- a/Solution1/UI/Web.config
+++ b/Solution1/UI/Web.config
@@ -12,6 +12,6 @@
       <httpRuntime targetFramework="4.5.2" />
     </system.web>
 <connectionStrings>
-    <add name="MyConn" connectionString="Data Source=.;Initial Catalog=test;user=sa;password=sa"/>
+    <add name="MyConn" connectionString="Data Source=.;Initial Catalog=test;user=sa;password=123"/>
   </connectionStrings>
 </configuration>
