导出数据到服务器端

--- a/Solution1/BLL/BLL.csproj
+++ b/Solution1/BLL/BLL.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="charting.cs" />
     <Compile Include="Datasplit.cs" />
+    <Compile Include="ExportDate.cs" />
     <Compile Include="isLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="cxjs.cs" />
