--- a/Solution1/BLL/BLL.csproj
+++ b/Solution1/BLL/BLL.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Datasplit.cs" />
     <Compile Include="isLogin.cs" />
+    <Compile Include="jsqk.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="cxjs.cs" />
     <Compile Include="PWDProcess.cs" />
