--- a/Solution1/BLL/BLL.csproj
+++ b/Solution1/BLL/BLL.csproj
@@ -44,16 +44,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin11.cs" />
     <Compile Include="charting.cs" />
     <Compile Include="Datasplit.cs" />
     <Compile Include="ExportDate.cs" />
     <Compile Include="isLogin.cs" />
     <Compile Include="jsqk.cs" />
+    <Compile Include="kqfx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="cxjs.cs" />
     <Compile Include="PWDProcess.cs" />
     <Compile Include="wpjs.cs" />
     <Compile Include="xsqk.cs" />
+    <Compile Include="zyfx.cs" />
+    <Compile Include="zytj.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
