--- a/Solution1/UI/Web.config
+++ b/Solution1/UI/Web.config
@@ -13,6 +13,6 @@
       <sessionState mode="InProc" cookieless="false" timeout="20"></sessionState>
     </system.web>
 <connectionStrings>
-    <add name="MyConn" connectionString="Data Source=.;Initial Catalog=test;user=sa;password=sa"/>
+    <add name="MyConn" connectionString="Data Source=.;Initial Catalog=test;user=sa;password=123"/>
   </connectionStrings>
 </configuration>
